# simple-git-changelog

./: CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg  setup.py
src/simple_git_changelog/: __init__.py  __main__.py  main.py
src/tests/: test_main.py
