[metadata]
name = simple-git-changelog
version = 1.1.3
url = https://github.com/craigahobbs/simple-git-changelog
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = Simple git changelog file generator
long_description = file:README.md
long_description_content_type = text/markdown
keywords = git, changelog
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities

[options]
packages = simple_git_changelog
package_dir =
    = src

[options.entry_points]
console_scripts =
    simple-git-changelog = simple_git_changelog.main:main
